# custom_image_processing

custom-worker/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  logbook.md  pyproject.toml
custom-worker/src/: __init__.py  ailabtools.py  config.py  control_api.py  db.py  drive.py  export.py  head_mode.py  human_parsing.py  images.py  ingest.py  logging_events.py  main.py  observability.py  photoroom.py  process.py  prompted_sam.py  quality.py  resolve.py  storage.py
custom-worker/tests/: test_head_mode.py  test_head_pipeline.py  test_parse_drive.py  test_processing_pipeline.py  test_quality_gate.py
